small changes in text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>
                     <img src="images/palboxing.jpg">
                     <h3>P.A.L. Boxing Gym</h3>
-                    <p>Gym for all ages where you can train or watch athletes "punch with purpose".</p>
+                    <p>This gym is for all ages where you can train or watch athletes "punch with purpose".</p>
                 </li>
                 <li>
                     <img src="images/trompo.jpeg">
