--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <title>Visit Vallejo</title>
     </head>
     <body>
         
