added open graph

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Visit Vallejo</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+
+        <meta property="og:title" content="Your Page Title" />
+        <meta property="og:description" content="A short description of your page." />
+        <meta property="og:image" content="URL to your image" />
+        <meta property="og:url" content="URL of your page" />
+        <meta property="og:type" content="website" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-        <title>Visit Vallejo</title>
     </head>
     <body>
         
