--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
 
-        <meta property="og:title" content="Your Page Title" />
-        <meta property="og:description" content="A short description of your page." />
-        <meta property="og:image" content="URL to your image" />
-        <meta property="og:url" content="URL of your page" />
+        <meta property="og:title" content="Visit Vallejo" />
+        <meta property="og:description" content="Visit Vallejo Scrimba Project" />
+        <meta property="og:image" content="https://hometownvallejo.netlify.app/" />
+        <meta property="og:url" content="https://hometownvallejo.netlify.app/" />
         <meta property="og:type" content="website" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
