--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <link rel="stylesheet" href="styles.css">
 
         <meta property="og:title" content="Visit Vallejo" />
-        <meta property="og:description" content="Visit Vallejo Scrimba Project" />
-        <meta property="og:image" content="https://hometownvallejo.netlify.app/" />
+        <meta property="og:description" content="hometown Scrimba project" />
+        <meta property="og:image" content="./images/hometownvallejo.png" />
         <meta property="og:url" content="https://hometownvallejo.netlify.app/" />
         <meta property="og:type" content="website" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
